--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.13",
     "node": "^16.1.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
+    "thunk": "0.0.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
