--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config": "^3.3.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.13",
     "node": "^16.1.0",
     "react": "^17.0.2",
