--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "google-maps-react": "^2.0.6",
+    "iconify": "^1.3.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^5.12.13",
     "node": "^16.1.0",
